--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <div
                 class="formData" data-error-visible="false">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input  class="text-control" id="quantity" name="quantity" >
               </div>
               <p class="error"></p>
 
